# fastapi-multiauth

./: README.md  SECURITY.md  pyproject.toml  zensical.toml
.github/workflows/: ci.yml
docs/: index.md  oauth.md  recipes.md  reference.md  security-model.md  usage.md
docs/overrides/: main.html
src/fastapi_multiauth/: __init__.py  _http.py  _imports.py  abc.py  exceptions.py  jwt.py  utils.py
src/fastapi_multiauth/oauth/: __init__.py  client.py  utils.py
src/fastapi_multiauth/sources/: __init__.py  basic.py  bearer.py  cookie.py  header.py  multi.py  query.py
tests/: test_multiauth.py
